2013-12-31  Murray Stokely  <mstokely@google.com>

	* src/wrapper_Message.cpp: Fix type coercion bug in add() method
	  for uint32s and add a missing break statement that erroneously
	  raised an error when setting some int64 fields.  Make more
	  function arguments const and remove a superfluous
	  BEGIN_RCPP/END_RCPP.  Also add comment about long-vector
	  support.  All of these fixes were highlighted by Flexelint.
	* inst/unitTests/runit.int64.R (test.int64): Add tests for above.
	* inst/unitTests/runit.extremevalues.R (test.uint32): Idem.
	* src/wrapper_FieldDescriptor.cpp (RPB_HANDLE_CASE): Remove
	  unreachable statement in a macro.
	* src/wrapper_Descriptor.cpp (rprotobuf): Remove unused variable,
	  rename another variable for clarity, and add some TODOs.
	* src/wrapper_FileDescriptor.cpp (rprotobuf): Idem.
	* src/DescriptorPoolLookup.cpp (rprotobuf): Remove unreachable
	  statement.
	* src/extensions.cpp: Remove unused header.
	* src/mutators.cpp (rprotobuf): Update code to check for Long
	  vectors and use the safer R_xlen_t type everywhere.  Protocol
	  Buffers repeated fields seem to be limited to int size indices
	  as with normal R vectors.
	* src/rprotobuf.h: Idem

2013-12-30  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.extremevalues.R (test.uint32): Add test
	  verifying that we can store 2^32 - 1 properly in repeated or
	  optional protobuf fields.
	* src/extractors.cpp (rprotobuf): Correct handling of uint32 for
	  repeated fields.
	* src/wrapper_Message.cpp (rprotobuf): Remove Rf_error in favor of
	  Rcpp_error so that we throw an exception and unwind the stack to
	  deallocate objects before jumping to R's error.
	* src/DescriptorPoolLookup.cpp (rprotobuf): Idem.
	* R/size.R: Correct an incorrect method name that prevented size<-
	  from working.
	* man/size.Rd: Document the behavior of size<-
	* (C++): Ran all the C++ files and most of the headers through
	  clang-format as described in the STYLE file on R-Forge.